--- a/locales/en.json
+++ b/locales/en.json
@@ -414,6 +414,7 @@
       "hide_username_emojis": "Hide username emojis",
       "hide_username_emojis_description": "Hides emojis from usernames in timelines. Emojis will still be visible in their profiles.",
       "label": "Preferences",
+      "show_instance_icon": "Show instance's software icon",
       "title": "Experimental Features",
       "user_picker": "User Picker",
       "virtual_scroll": "Virtual Scrolling",
