feat: show user's banner in hover card

--- a/locales/en.json
+++ b/locales/en.json
@@ -414,7 +414,8 @@
       "hide_username_emojis": "Hide username emojis",
       "hide_username_emojis_description": "Hides emojis from usernames in timelines. Emojis will still be visible in their profiles.",
       "label": "Preferences",
-      "show_instance_icon": "Show instance's software icon",
+      "show_hover_banner": "Show banner in hover card",
+      "show_instance_icon": "Show instance software icons",
       "title": "Experimental Features",
       "user_picker": "User Picker",
       "virtual_scroll": "Virtual Scrolling",
