--- a/locales/en.json
+++ b/locales/en.json
@@ -400,6 +400,7 @@
     },
     "notifications_settings": "Notifications",
     "preferences": {
+      "default_reply_unlisted": "Prefer unlisted replies",
       "enable_autoplay": "Enable Autoplay",
       "enable_pinch_to_zoom": "Enable pinch to zoom",
       "github_cards": "GitHub Cards",
